<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/blanco_hueso">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Agregar producto"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/naranja_suave"
            android:gravity="center"
            android:paddingBottom="16dp" />

        <!-- Nombre -->
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="8dp"
            android:background="@color/azul_pastel"
            android:textColor="@color/black"
            android:hint="@string/producto_nombre"
            android:padding="12dp"
            android:textSize="16sp" />

        <!-- Categoría -->
        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/azul_pastel"
            android:popupBackground="@color/blanco_puro" />

        <!-- Precio -->
        <EditText
            android:id="@+id/etPrecio"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="8dp"
            android:background="@color/azul_pastel"
            android:textColor="@color/black"
            android:hint="@string/precio_producto"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textSize="16sp" />

        <!-- Stock -->
        <EditText
            android:id="@+id/etStock"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:background="@color/azul_pastel"
            android:textColor="@color/black"
            android:hint="@string/stock_producto"
            android:inputType="number"
            android:padding="12dp"
            android:textSize="16sp" />

        <!-- Botón Agregar -->
        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PrimaryButton"
            android:background="@drawable/rounded_button_green"
            android:backgroundTint="@color/verde_manzana"
            android:layout_marginTop="24dp"
            android:padding="16dp"
            android:text="Agregar"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
